Rust book: Chapter 7

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /ryan-levick/kvstore/target
 /ryan-levick/myvec/target
 /lets-get-rusty/rust-lang-book/target
+/lets-get-rusty/rust-lang-book/others/chapter-7/crate/target
+/lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
