11 chapter done: Tests

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /lets-get-rusty/rust-lang-book/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/crate/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
+/lets-get-rusty/rust-lang-book/others/chapter-11/adder/target
