--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /lets-get-rusty/rust-lang-book/others/chapter-7/crate/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
 /lets-get-rusty/rust-lang-book/others/chapter-11/adder/target
+/lets-get-rusty/rust-lang-book/others/chapter-12/minigrep/target
