Added snippets folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
 /lets-get-rusty/rust-lang-book/others/chapter-11/adder/target
 /lets-get-rusty/rust-lang-book/others/chapter-12/minigrep/target
+/snippets/traits/aggregate/target
