forget to push from root

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@
 /lets-get-rusty/rust-lang-book/others/chapter-11/adder/target
 /lets-get-rusty/rust-lang-book/others/chapter-12/minigrep/target
 /snippets/traits/aggregate/target
-/snippets/slices/target
+/exercism/target
