--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /ryan-levick/kvstore/target
 /ryan-levick/myvec/target
+/ryan-levick/threadpool/target
 /lets-get-rusty/rust-lang-book/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/crate/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
