Added echo client/server program

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@
 /lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
 /lets-get-rusty/rust-lang-book/others/chapter-11/adder/target
 /lets-get-rusty/rust-lang-book/others/chapter-12/minigrep/target
-/snippets/traits/aggregate/target
+/practise/traits/aggregate/target
 /exercism/target
+/practise/echo-play/echo*/target
+/practise/echo-play/echo*/Cargo.lock
