--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /ryan-levick/kvstore/target
 /ryan-levick/myvec/target
 /ryan-levick/threadpool/target
+/ryan-levick/lifetimes/target
 /lets-get-rusty/rust-lang-book/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/crate/target
 /lets-get-rusty/rust-lang-book/others/chapter-7/restaurant/target
