--- a/practise/playground/todo-notifier/Cargo.toml
+++ b/practise/playground/todo-notifier/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "server"
+name = "todo-notifier"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
-mio = {version="0.8", features=["os-poll", "net"]}
+notify-rust = "4.8.0"
+zbus = "3.14.1"
+serde_json = "1.0.96"
+serde = { version = "1.0.162", features = ["derive"] }
+chrono = "0.4.26"
