--- a/practise/playground/nostr-backup/Cargo.toml
+++ b/practise/playground/nostr-backup/Cargo.toml
@@ -15,3 +15,7 @@ hex = "0.4.3"
 serde_json = "1.0.96"
 # Serde is a framework for serializing and deserializing Rust data structures efficiently and generically
 serde = "1.0.160"
+log = "0.4.17"
+
+[dev-dependencies]
+env_logger = "0.10.0"
