--- a/practise/theory/common_mistakes/Cargo.toml
+++ b/practise/theory/common_mistakes/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "server"
+name = "common_mistakes"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
-mio = {version="0.8", features=["os-poll", "net"]}
+serde = { version = "1.0", features = ["derive", "rc"], optional = true }
+serde_json = "1.0"
+
+[features]
+serde = ["dep:serde"]
